Add facebook and twitter meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Week 05 - Travel Agency Site</title>
 
+  <!-- Meta Tags -->
+  <!-- See: https://css-tricks.com/essential-meta-tags-social-media/ -->
+  <!-- Facebook -->
+  <meta property="og:title" content="BRG Travels">
+  <meta property="og:description" content="BRG Travels - the best travel agency in Nepal">
+  <meta property="og:image" content="https://brgtravels.netlify.app/img/banner.jpg">
+  <meta property="og:url" content="https://brgtravels.netlify.app/index.html">
+
+  <!-- Twitter -->
+  <meta name="twitter:title" content="BRG Travels">
+  <meta name="twitter:description" content="BRG Travels - the best travel agency in Nepal">
+  <meta name="twitter:image" content="https://brgtravels.netlify.app/img/banner.jpg">
+  <meta name="twitter:card" content="Summary">
+
   <!-- fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Open+Sans:wght@300;400;600;700&family=Raleway:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet">
 
