--- a/index.html
+++ b/index.html
@@ -407,8 +407,8 @@
   </main>
 
   <!-- footer -->
-  <footer>
-    <p class="mb-0 text-center">Copyright &copy; 2021 BRG Travels. All rights reserved</p>
+  <footer class="footer-section">
+    <p class="mb-0 text-center">Copyright &copy; 2021. <a href="https://brgclasses.com" class="text-yellow no-decoration">BRG Classes</a>. All rights reserved</p>
   </footer>
 
   <!-- JavaScripts -->
