--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Week 05 - Travel Agency Site</title>
+  <title>BRG Travels - Home</title>
 
   <!-- Meta Tags -->
   <!-- See: https://css-tricks.com/essential-meta-tags-social-media/ -->
